--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,5 +3,12 @@ repos:
   hooks:
   - id: update-advancement
     name: Update README with advancement
-    entry: powershell -file ./pre-commit-hook.ps1
+    entry: powershell -file ./pre-commit-hook.sh
     language: system
+- repo: https://github.com/dnephin/pre-commit-golang
+  rev: v0.4.0
+  hooks:
+    - id: go-fmt
+    - id: golangci-lint
+    - id: go-mod-tidy
+    - id: go-unit-tests
